--- a/translation.ipynb
+++ b/translation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhiYYXqzujtEvif9as6ujI",
+      "authorship_tag": "ABX9TyOTkgJUuyItvkY/bCUJlNGL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,30 @@
       ],
       "metadata": {
         "id": "uoYtZuJEgnGi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#speexh to text convert using whisper model\n",
+        "!pip install openai-whisper\n",
+        "!apt install -y ffmpeg\n",
+        "import whisper\n",
+        "from google.colab import files\n",
+        "\n",
+        "model = whisper.load_model(\"base\")\n",
+        "\n",
+        "uploaded =  files.upload()\n",
+        "audio = list(uploaded.keys())[0]\n",
+        "\n",
+        "result = model.transcribe(audio, fp16 = False)\n",
+        "\n",
+        "print(result[\"text\"])"
+      ],
+      "metadata": {
+        "id": "4p_HPKNRw2nM"
       },
       "execution_count": null,
       "outputs": []
